# motion-capture

./: .gitignore  .gitmodules  README.md  data_vis.ipynb  dataloader_test.ipynb  dataset_embedding.py  model_tests.ipynb  pyproject.toml  training.py
configs/: devices.json  model.json  training.json
configs/hydra/: config.yaml  defaults.yaml  embedding-config.yaml  face-detection.yaml
configs/hydra/checkpointCallback/: top3min.yaml
configs/hydra/data/: WFLW-bbox.yaml  face-bbox.yaml
configs/hydra/data/datasets/: COCOPanoptics-bbox.yaml  (+4 more)
configs/hydra/datamodule/: WFLWBbox.yaml  defaultBbox.yaml
configs/hydra/dataset/: WFLWBbox-l.yaml
configs/hydra/experiment/: default.yaml  defaults.yaml  experiment-1.yaml
configs/hydra/logger/: mlflow.yaml
configs/hydra/model/: basic-model.yaml  default-model.yaml  main-model.yaml  person-bbox.yaml  upsample_cross_attention-default.yaml  upsample_cross_attention-s.yaml
configs/hydra/modelStructure/: upsampleCrossAttention-s.yaml
configs/hydra/modelTraining/: l1AdamWLRScheduler.yaml
configs/hydra/stochasticWeightAveraging/: default.yaml
configs/hydra/trainer/: default.yaml  veryShortTraining.yaml
configs/hydra/training/: default-training.yaml  defaults.yaml
core/: ImageZMQ.py  datamodel.py  export.py  fileIO.py  structure.py  torchhelpers.py  utils.py
data/: datasets.py  preprocessing.py  thirdpartyannotations.py
mlruns/0/: meta.yaml
model/: benchmarking.py  config.json  conv.py  convheads.py  convnecks.py  convolutionals.py  endtoendmodels.py  heads.py  necks.py  special.py  transformers.py
motion_capture/: model.py
motion_capture/components/: RePFormer.py  convolution.py  special.py  transformer.py
motion_capture/core/: benchmark.py  datamodel.py  fileIO.py  torchhelpers.py  utils.py
motion_capture/data/: dataclasses.py  datamodules.py  datasets.py  preprocessing.py  thirdpartyannotations.py
motion_capture/model/: RePFormer.py  backbones.py  convolution.py  heads.py  models.py  modules.py  primaryModels.py  special.py  trainingmodules.py  transformer.py
motion_capture/model/convolution/: backbones.py  core.py  heads.py  necks.py
motion_capture/model/convolution_/: backbones.py  necks.py
motion_capture/model/transformer/: core.py
motion_capture/utils/: ICP.py  WiseIoU.py  sam.py  torchhelpers.py
notebooks/: dataloader_test.py  model_test.py
trainings/: dataset_embedding.py  face_recognition.py
(+3 files in other folders)
