[tool.poetry]
name = "motion-capture"
version = "0.1.0"
description = "motion capture suite"
authors = ["kristina-aino <kristina.ai@proton.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "motion_capture"}]

[tool.poetry.dependencies]
python = "^3.10"
device-capture-system = {path = "../device-capture-system/dist/device_capture_system-1.1.0.tar.gz"}
calibrate-camera-system = {path = "../calibrate-camera-system/dist/calibrate_camera_system-1.0.0.tar.gz"}
numpy-quaternion = "^2023.0.3"
numpy = "^1.1.0"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
