[project]
name = "motion-capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "marimo[mcp]>=0.17.0",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
